Bug #27292 restarting a data node makes sql nodes log event buffer status every few seconds
Submitted: 20 Mar 2007 15:46 Modified: 15 May 2007 8:36
Reporter: Hartmut Holzgraefe
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1bk OS:Any
Assigned to: Tomas Ulin Target Version:

[20 Mar 2007 15:46] Hartmut Holzgraefe
Description:
after restarting a data node with "id RESTART" all mysql nodes
start to write the following log messages about every 2 seconds,
so spamming the logs

2007-03-20 15:39:33 [MgmSrvr] INFO     -- Node 5: Event buffer status: used=128B(100%)
alloc=128B(0%) max=0B apply_gci=15 latest_gci=31
2007-03-20 15:39:33 [MgmSrvr] INFO     -- Node 4: Event buffer status: used=128B(100%)
alloc=128B(0%) max=0B apply_gci=15 latest_gci=31

How to repeat:
Set up a fresh cluster (1 ndb_mgmd, 2 ndbd (replica=2), 2 mysqld in my case),
restart one ndbd using 

  ndb_mgm -e "2 restart",

watch the ndb_#_cluster.log (e.g. with tail -f) and see the log spam to start once the
data node is back up
[19 Apr 2007 10:56] Pavel Pushkarev
Looks like the bug is around line 1501 in NdbEventOperationImpl.cpp.

The workaround is to comment reportStatus() on 1515, but that doesn't solve the problem.
[9 May 2007 12:32] Tomas Ulin
Upgrading to P2, behind this is actually a "small memleak"
[9 May 2007 12:32] Tomas Ulin
this should only show up if bin-logging is not on
[9 May 2007 12:33] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26366

ChangeSet@1.2511, 2007-05-09 12:51:37+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #27292  	restarting a data node makes sql nodes log event buffer status every few
seconds
[10 May 2007 14:57] Bugs System
Pushed into 5.1.19-beta
[15 May 2007 8:36] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.18 changelog. Noted that it was observed only in 5.1.16 and
later.