Bug #27292  	restarting a data node makes sql nodes log event buffer status every few seconds